--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       justify-content: center;
       align-items: center;
       height: 100vh; /* Adjust the height as needed */
+      overflow: hidden;
     }
 
     #snakeCanvas {
